2010-06-30   D. V. Wiebe <getdata@ketiltrout.net>   svn:419
	* src/mod.c (_GD_SPFConvert): _GD_AddData is only used by _GD_Change to
	convert SPFs, so pare it down and rename.
	* src/common.c (_GD_AddData): Moved to src/mod.c and renamed _GD_SPFConvert.

2010-06-29   D. V. Wiebe <getdata@ketiltrout.net>   svn:418
	* m4/compiler.m4 (GD_CHECK_LFS_TYPE): Added.
	* configure.ac: Better tests for LFS Transitional API types.  Don't rely on
	the `complex' macro when checking types.  Move the MSCVRT test back to the
	proper place.

2010-06-28   D. V. Wiebe <getdata@ketiltrout.net>   svn:414
	Merged in changes from the ARM branch, revision 385:

	* bindings/make_parameters.c: Don't include the legacy API.

	* test/put_endian_float32_big.c test/put_endian_float64_big.c
	test/put_endian_complex64_little.c test/put_endian_float32_arm.c
	test/put_endian_float64_arm.c test/get_endian_complex64_big.c
	test/put_endian_float32_little.c test/put_endian_complex64_big.c
	test/endian_get.c test/get_endian_complex64_arm.c
	test/put_endian_complex64_arm.c test/put_endian_complex128_big.c
	test/get_endian_float32_little.c test/put_endian_complex128_arm.c
	test/get_endian_complex128_big.c test/get_endian_float32_big.c
	test/get_endian_float64_big.c test/get_endian_complex128_little.c
	test/get_endian_complex128_arm.c test/get_endian_float32_arm.c
	test/get_endian_float64_arm.c test/get_endian_complex64_little.c
	test/put_endian_float64_little.c test/put_endian_complex128_little.c
	test/get_endian_float64_little.c: Added.

	* test/put_endian_float32.c test/get_endian_float64.c
	test/put_endian_complex128.c test/put_endian_complex64.c
	test/put_endian_float64.c test/get_endian_complex64.c
	test/get_endian_complex128.c test/get_endian_float32.c: Removed.

	* src/parse.c (_GD_ParseDirective): Handle missing second parameter to
	/ENDIAN.

	* m4/python.m4: Don't specify -L unless needed.
	
	* bindings/idl/getdata.c (gdidl_read_idl_entry): Fix compiler warning.

	* configure.ac: Calculate BUILDCC